tests/parsing/type_redefinition_in_file/stderr.golden
error: redefinition of type 't', first definition line 1 column 6
bus.fbd +2:6
   |
 2 | type t static
   |      ^
bus.fbd +1:6
   |
 1 | type t config
   |      ^
